--- a/Eindopdracht HTML&CSS/history.html
+++ b/Eindopdracht HTML&CSS/history.html
@@ -15,10 +15,10 @@
     <div class="topnav" id="myTopnav">
         <a href="index.html">Home</a>
         <div class="dropdown active">
-            <a href="history.html" class="dropbtn" id="myBtn">History
-                <i class="fa fa-caret-down"></i>
-            </a>
-            <div id="myDropdown" class="dropdown-content">
+            <button id="myBtn" class="dropbtn" onclick="showDropdown()">History
+              <i class="fa fa-caret-down"></i>
+            </button>
+            <div class="dropdown-content" id="myDropdown">
                 <a href="history.html#first">Early History</a>
                 <a href="history.html#middle">17th-18th-19th Century</a>
                 <a href="history.html#last">Last Centuries</a>
@@ -27,13 +27,13 @@
         <a href="unexpected.html" id="unexpected">Unexpected</a>
         <a href="surprise.html">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
     <br>
 
     <br>
-    <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+    <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
     <h2 id="first">Early history</h2>
 
     <table>
@@ -56,7 +56,7 @@
             <td>1700</td>
             <td>1800</td>
             <td>1900</td>
-            <td>1950</td>           
+            <td>1950</td>
         </tr>
         <tr>
             <td>Tol-recht</td>
@@ -64,7 +64,7 @@
             <td>Ons lieve Heer op Solder</td>
             <td>Paleis</td>
             <td>Uitbreiding</td>
-            <td>Wederopbouw</td>           
+            <td>Wederopbouw</td>
         </tr>
     </table>
 
@@ -72,7 +72,7 @@
     Privilege from 1275 is the oldest written piece mentioning Amsterdam.
     <br>
 
-    <img src="https://blockchain-consultancy.eu/images-surprising//tolprivilege.jpg" alt="tolprivilege">
+    <img src="images/tolprivilege.jpg" alt="tolprivilege">
     <p>
         Amsterdam is the capital and largest city of the Netherlands. It has a rich history that spans several
         centuries.
@@ -80,8 +80,8 @@
         The origins of Amsterdam can be traced back to the 12th century, when a small fishing village called
         "Aemstelredamme" was established on the banks of the Amstel River.</p>
 
-    <img src="https://blockchain-consultancy.eu/images-surprising/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
-    <img src="https://blockchain-consultancy.eu/images-surprising/kog.jpg" alt="map of old Aemstelredamme">
+    <img src="images/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
+    <img src="images/kog.jpg" alt="map of old Aemstelredamme">
 
 
 
@@ -97,8 +97,8 @@
 
     <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="middle">17th-18th-19th Century</h2>
-    <img src="https://blockchain-consultancy.eu/images-surprising/17eeuw.jpg" alt="17th century">
-    <img src="https://blockchain-consultancy.eu/images-surprising/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
+    <img src="images/17eeuw.jpg" alt="17th century">
+    <img src="images/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
     <br>
 
     In the 17th century, Amsterdam continued to flourish as a major center of trade and commerce. The Dutch East
@@ -113,17 +113,16 @@
     <br>
     <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="last">Last Centuries</h2>
-    <img src="https://blockchain-consultancy.eu/images-surprising/paard.jpg" alt="paard en koets">
-    <img src="https://blockchain-consultancy.eu/images-surprising/street-jordaan.jpg" alt="street in the jordaan ">
+    <img src="images/paard.jpg" alt="paard en koets">
+    <img src="images/street-jordaan.jpg" alt="street in the jordaan ">
     <br>
     <p>
-    In the 20th century, Amsterdam faced a number of challenges, including the devastation of World War II and the
-    decline of traditional industries. However, the city has also undergone a process of revitalization and renewal,
-    becoming a major center of tourism, culture, and innovation. Today, Amsterdam is a vibrant, cosmopolitan city
-    that is known for its rich history, culture, and architecture.
+        In the 20th century, Amsterdam faced a number of challenges, including the devastation of World War II and the
+        decline of traditional industries. However, the city has also undergone a process of revitalization and renewal,
+        becoming a major center of tourism, culture, and innovation. Today, Amsterdam is a vibrant, cosmopolitan city
+        that is known for its rich history, culture, and architecture.
 
     </p>
-
 
 
     <footer class="footer">
@@ -140,8 +139,7 @@
         </div>
     </footer>
 
-    <script src="responsive.js"></script>
-
+   <script src="responsive.js"></script>
 </body>
 
 </html>
