--- a/Eindopdracht HTML&CSS/contact.html
+++ b/Eindopdracht HTML&CSS/contact.html
@@ -15,10 +15,10 @@
   <div class="topnav" id="myTopnav">
     <a href="index.html">Home</a>
     <div class="dropdown">
-      <button id="myBtn" class="dropbtn">History
+      <button id="myBtn" class="dropbtn" onclick="showDropdown()">History
         <i class="fa fa-caret-down"></i>
       </button>
-      <div id="myDropdown" class="dropdown-content">
+      <div class="dropdown-content" id="myDropdown">
         <a href="history.html#first">Early History</a>
         <a href="history.html#middle">17th-18th-19th Century</a>
         <a href="history.html#last">Last Centuries</a>
@@ -27,7 +27,7 @@
     <a href="unexpected.html" id="unexpected">Unexpected</a>
     <a href="surprise.html">Surprise</a>
     <a href="contact.html" class="active">Contact</a>
-    <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
+    <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
   </div>
   <br>
@@ -37,7 +37,7 @@
 
   <p>Please visit our Headquarters in the Palace right on the Dam-Square in the city center of Amsterdam.</p>
   <br>
-  <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+  <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
 
   <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
     <h2>Contact Formulier</h2>
