--- a/Eindopdracht HTML&CSS/index.html
+++ b/Eindopdracht HTML&CSS/index.html
@@ -28,12 +28,12 @@
         <a href="unexpected.html" id="unexpected">Unexpected</a>
         <a href="surprise.html">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="index.html#top" class="split"><img src="images/logo.png" class="logo" alt="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" class="logo" alt="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
 
     </div>
     <br>
-    <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+    <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
     <h1>Surprising Amsterdam</h1>
     <hr>
 
@@ -58,29 +58,29 @@
     <hr>
     <div class="image-container">
         <div class="item item-1">
-            <img src="images/buildings-on-canal.jpg" alt="buildings on canal">
+            <img src="https://blockchain-consultancy.eu/images-surprising/buildings-on-canal.jpg" alt="buildings on canal">
         </div>
         <div class="item item-2">
-            <img src="images/building.jpg" alt="17th century buildings">
+            <img src="https://blockchain-consultancy.eu/images-surprising/building.jpg" alt="17th century buildings">
         </div>
         <div class="item item-3">
             <video width="420" height="340" controls title="Thanks!! Rok Goes Around on Youtube.">
-                <source src="images/Video.mov" type="video/mp4">
+                <source src="https://blockchain-consultancy.eu/images-surprising/Video.mov" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
         <div class="item item-4">
-            <img src="images/street-jordaan.jpg" alt="street in jordaan">
+            <img src="https://blockchain-consultancy.eu/images-surprising/street-jordaan.jpg" alt="street in jordaan">
         </div>
         <div class="item item-5">
-            <img src="images/botenenmunt.jpg" alt="boats and mint">
+            <img src="https://blockchain-consultancy.eu/images-surprising/botenenmunt.jpg" alt="boats and mint">
         </div>
     </div>
     <hr>
 
     <div class="image-container-large">
         <div class="large large-1">
-            <img src="images/park.jpg" alt="bicycles on a bridge">
+            <img src="https://blockchain-consultancy.eu/images-surprising/park.jpg" alt="bicycles on a bridge">
             <p>Groen Amsterdam</p>
         </div>
 
@@ -93,7 +93,7 @@
         </div>
 
         <div class="large large-3">
-            <img src="images/bridge-bikes.jpg" alt="bicycles on a bridge">
+            <img src="https://blockchain-consultancy.eu/images-surprising/bridge-bikes.jpg" alt="bicycles on a bridge">
             <p> Fietsen in Amsterdam</p>
         </div>
 
