--- a/Eindopdracht HTML&CSS/history.html
+++ b/Eindopdracht HTML&CSS/history.html
@@ -27,13 +27,13 @@
         <a href="unexpected.html" id="unexpected">Unexpected</a>
         <a href="surprise.html">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
     <br>
 
     <br>
-    <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+    <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
     <h2 id="first">Early history</h2>
 
     <table>
@@ -72,7 +72,7 @@
     Privilege from 1275 is the oldest written piece mentioning Amsterdam.
     <br>
 
-    <img src="images/tolprivilege.jpg" alt="tolprivilege">
+    <img src="https://blockchain-consultancy.eu/images-surprising/tolprivilege.jpg" alt="tolprivilege">
     <p>
         Amsterdam is the capital and largest city of the Netherlands. It has a rich history that spans several
         centuries.
@@ -80,8 +80,8 @@
         The origins of Amsterdam can be traced back to the 12th century, when a small fishing village called
         "Aemstelredamme" was established on the banks of the Amstel River.</p>
 
-    <img src="images/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
-    <img src="images/kog.jpg" alt="map of old Aemstelredamme">
+    <img src="https://blockchain-consultancy.eu/images-surprising/damrak2-ahm.png" alt="drawing of a dam in the Amstel river">
+    <img src="https://blockchain-consultancy.eu/images-surprising/kog.jpg" alt="map of old Aemstelredamme">
 
 
 
@@ -97,8 +97,8 @@
 
     <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="middle">17th-18th-19th Century</h2>
-    <img src="images/17eeuw.jpg" alt="17th century">
-    <img src="images/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
+    <img src="https://blockchain-consultancy.eu/images-surprising/17eeuw.jpg" alt="17th century">
+    <img src="https://blockchain-consultancy.eu/images-surprising/800px-Cornelis_anthonisz_vogelvluchtkaart_amsterdam.jpeg" alt="old map of Amsterdam">
     <br>
 
     In the 17th century, Amsterdam continued to flourish as a major center of trade and commerce. The Dutch East
@@ -113,8 +113,8 @@
     <br>
     <div title="To The Top"><a href="#top"><i class="fa fa-arrow-up" aria-hidden="true"></i></a>To The Top</div>
     <h2 id="last">Last Centuries</h2>
-    <img src="images/paard.jpg" alt="paard en koets">
-    <img src="images/street-jordaan.jpg" alt="street in the jordaan ">
+    <img src="https://blockchain-consultancy.eu/images-surprising/paard.jpg" alt="paard en koets">
+    <img src="https://blockchain-consultancy.eu/images-surprising/street-jordaan.jpg" alt="street in the jordaan ">
     <br>
     <p>
         In the 20th century, Amsterdam faced a number of challenges, including the devastation of World War II and the
