images-surprise-links

--- a/Eindopdracht HTML&CSS/surprise.html
+++ b/Eindopdracht HTML&CSS/surprise.html
@@ -27,11 +27,11 @@
         <a href="unexpected.html" id="unexpected">Unexpected</a>
         <a href="surprise.html" class="active">Surprise</a>
         <a href="contact.html">Contact</a>
-        <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
+        <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
     </div>
     <br>
-    <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+    <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
     <p>
     <h2>Amsterdam: The Surprising City</h2>
 
@@ -42,7 +42,7 @@
     </p>
 
     <p>
-        <img src="images/bikes.jpg" alt="bicycles parked on bridge">
+        <img src="https://blockchain-consultancy.eu/images-surprising/bikes.jpg" alt="bicycles parked on bridge">
         <br>
         Amsterdam is the cycling capital of the world.
         With over 800,000 bicycles and only 700,000 residents, Amsterdam is the world's leading city for cycling. The
@@ -53,7 +53,7 @@
     </p>
 
     <p>
-        <img src="images/old-stockexchange.jpg" alt="old stockexchage">
+        <img src="https://blockchain-consultancy.eu/images-surprising/old-stockexchange.jpg" alt="old stockexchage">
         <br>
         Amsterdam is home to the world's first stock exchange.
         Established in 1720, the Amsterdam Stock Exchange was the first in the world and played a significant role in
@@ -63,7 +63,7 @@
     </p>
 
     <p>
-        <img src="images/poles.png" alt="amsterdam build on poles">
+        <img src="https://blockchain-consultancy.eu/images-surprising/poles.png" alt="amsterdam build on poles">
         <br>
         Amsterdam is built on poles.
         The city of Amsterdam is built on poles, and the ground is below sea level. To protect against floods, the city
@@ -78,7 +78,7 @@
         interested in horticulture or just looking for a unique shopping experience.
     </p>
     <br>
-    <img src="images/nemo.jpg" alt="nemo">
+    <img src="https://blockchain-consultancy.eu/images-surprising/nemo.jpg" alt="nemo">
     <p>
         Amsterdam has its own floating forest.
         The NEMO Science Museum in Amsterdam is known for its distinctive green roof, which doubles as a floating
