image-links fixed

--- a/Eindopdracht HTML&CSS/contact.html
+++ b/Eindopdracht HTML&CSS/contact.html
@@ -27,7 +27,7 @@
     <a href="unexpected.html" id="unexpected">Unexpected</a>
     <a href="surprise.html">Surprise</a>
     <a href="contact.html" class="active">Contact</a>
-    <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
+    <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
   </div>
   <br>
@@ -37,7 +37,7 @@
 
   <p>Please visit our Headquarters in the Palace right on the Dam-Square in the city center of Amsterdam.</p>
   <br>
-  <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+  <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
 
   <form action="https://jkorpela.fi/cgi-bin/echo.cgi">
     <h2>Contact Formulier</h2>
