--- a/Eindopdracht HTML&CSS/unexpected.html
+++ b/Eindopdracht HTML&CSS/unexpected.html
@@ -27,13 +27,13 @@
     <a href="unexpected.html" id="unexpected" class="active">Unexpected</a>
     <a href="surprise.html">Surprise</a>
     <a href="contact.html">Contact</a>
-    <a href="index.html#top" class="split"><img src="images/logo.png" alt="logo" class="logo"></a>
+    <a href="index.html#top" class="split"><img src="https://blockchain-consultancy.eu/images-surprising/logo.png" alt="logo" class="logo"></a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776; Menu</a>
   </div>
   <br>
   <h1>Unexpected Amsterdam</h1>
   <br>
-  <img class="foto" src="images/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
+  <img class="foto" src="https://blockchain-consultancy.eu/images-surprising/Coat_of_arms_of_Amsterdam.svg.png" alt="Coat_of_arms_of_Amsterdam">
 
   <p>
     Amsterdam is a popular tourist destination, known for its picturesque canals, historic architecture, and
@@ -44,13 +44,13 @@
     houses and a small church. It's a peaceful and quiet spot that is a great place to escape the hustle and bustle
     of the city.
 
-    <img src="images/zaanseschans.jpg" alt="Zaanse Schans">
+    <img src="https://blockchain-consultancy.eu/images-surprising/zaanseschans.jpg" alt="Zaanse Schans">
   <p>
     The Zaanse Schans: This is a picturesque village located just outside of Amsterdam that is home to a collection
     of well-preserved 18th- and 19th-century Dutch houses, windmills, and a traditional cheese farm.
   </p>
   <br>
-  <img src="images/tulip.jpg" alt="">
+  <img src="https://blockchain-consultancy.eu/images-surprising/tulip.jpg" alt="">
   The Botanical Garden: Amsterdam has a beautiful botanical garden located in the heart of the city where you can
   see a wide variety of plants from all over the world in a beautiful setting.
 
