--- a/training.html
+++ b/training.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>UNDER COSTRUCTIONI</h1>
+    <h1>Netinsight Training</h1>
     <a href="/Net Insight training  december 2010/">NetInsight Training</a>
     
 </body>
