--- a/training.html
+++ b/training.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Netinsight Training</h1>
-    <a href="/Net Insight training  december 2010/">NetInsight Training</a>
+    <a href="/Net Insight training  december 2010">NetInsight Training</a>
     
 </body>
 </html>
