--- a/training.html
+++ b/training.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Netinsight Training</h1>
-    <a href="/Net Insight training  december 2010">NetInsight Training</a>
+    <a href="https://github.com/MartinGue/MartinGue.github.io/tree/main/Net%20Insight%20training%20%20december%202010">NetInsight Training</a>
     
 </body>
 </html>
