--- a/training.html
+++ b/training.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Netinsight Training</h1>
-    <a href="https://github.com/MartinGue/MartinGue.github.io/tree/main/Net Insight training december 2010">NetInsight Training</a>
+    
+    <h1><a href="https://github.com/MartinGue/MartinGue.github.io/tree/main/Net-Insight-training-december-2010">NetInsight Training</a></h1>
     
 </body>
 </html>
