--- a/training.html
+++ b/training.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NetInsight Training</title>
 </head>
-<body>
-    
+<body>    
     <h1><a href="https://github.com/MartinGue/MartinGue.github.io/tree/main/Net-Insight-training-december-2010">NetInsight Training</a></h1>
     
 </body>
